--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://she.be_mine.vercel.app/" />
+    <meta property="og:url" content="https://she-be-mine.vercel.app/" />
     <meta property="og:title" content="For Esther ❤️" />
     <meta
       property="og:description"
@@ -24,7 +24,7 @@
     />
     <meta
       property="og:image"
-      content="https://she.be_mine.vercel.app/og-love.png"
+      content="https://she-be-mine.vercel.app/og-love.png"
     />
 
     <!-- Image quality hints -->
@@ -33,7 +33,7 @@
 
     <!-- Twitter / X -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://she.be_mine.vercel.app/" />
+    <meta name="twitter:url" content="https://she-be-mine.vercel.app/" />
     <meta name="twitter:title" content="For Esther ❤️" />
     <meta
       name="twitter:description"
@@ -41,7 +41,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://she.be_mine.vercel.app/og-love.jpg"
+      content="https://she-be-mine.vercel.app/og-love.jpg"
     />
 
     <!-- Optional polish -->
