--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://she-be-mine.vercel.app/og-love.jpg"
+      content="https://she-be-mine.vercel.app/og-love.png"
     />
 
     <!-- Optional polish -->
